--- a/runtimes/scala/.classpath
+++ b/runtimes/scala/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="D:/DEVELOP/akka-2.3.7/lib/akka/akka-actor_2.11-2.3.7.jar"/>
-	<classpathentry kind="lib" path="D:/DEVELOP/akka-2.3.7/lib/akka/config-1.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/akka-actor_2.11-2.3.8.jar"/>
+	<classpathentry kind="lib" path="lib/config-1.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
