--- a/runtimes/unity/TestBrotoriftClient/TestBrotoriftClient.csproj
+++ b/runtimes/unity/TestBrotoriftClient/TestBrotoriftClient.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientChatServerConnector.cs" />
+    <Compile Include="ChatClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
