--- a/runtimes/unity/BrotoriftClient/BrotoriftClient.csproj
+++ b/runtimes/unity/BrotoriftClient/BrotoriftClient.csproj
@@ -37,6 +37,9 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnityEngine">
+      <HintPath>D:\DEVELOP\Unity\Editor\Data\Managed\UnityEngine.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
