--- a/runtimes/unity/TestBrotoriftClient/TestBrotoriftClient.csproj
+++ b/runtimes/unity/TestBrotoriftClient/TestBrotoriftClient.csproj
@@ -39,6 +39,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnityEngine">
+      <HintPath>D:\DEVELOP\Unity2017.3.1p2\Editor\Data\Managed\UnityEngine.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChatClient.cs" />
